[package]
authors = ["JJ Garzella <jjgarzella@gmail.com>", "Calvin Lee <cyrus296@gmail.com>"]
name = "ESALP"
version = "0.1.1"

[dependencies]
bit_field = "0.7.0"
bitflags = "1.0"
once = "0.3.2"
rlibc = "0.1.4"
spin = "0.4.10"
multiboot2 = "0.3.0"
x86_64 = "0.1.2"

[dependencies.hole_list_allocator]
path = "libs/hole_list_allocator"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.1"

[lib]
crate-type = ["staticlib"]

[features]
default = []
test = []
